# infomesas-gui

./: README.md  actualizar.sh  base.html  base.html.backup  cc.html  chequeDialog.ui  cheques.html  cheques.ui  cheques_template.html  clientes.ui  deudas.html  deudas_template.html  generar_cc_jinja.py  generar_cheques_jinja.py  generar_deudas_jinja.py  generar_lista_jinja.py  generar_pedidos_jinja.py  generar_pendientes_jinja.py  generar_precios_jinja.py  generar_soldini_jinja.py  generar_ultima_lista.py  historialPrecios.ui  historialPreciosMov.ui  iconosResource.qrc  iconosResource_rc.py  index.html  infomesas-gui.py  infomesas.db  infomesas.db.backup  infomesas.db.bak  infomesasmain.ui  infomesasmain.ui.backup  lanzador.sh  lista.html  lista_template.html  lista_template.html.backup  movimiento.ui  notas.ui  pedido.ui  pedidoDialog.ui  (+23 more)
.vim/: coc-settings.json
icons/: favicon.xcf
mobile/: Abggb.html  Anapv.html  Ayelen-deudas.html  Ayelen.html  Bartolini-deudas.html  Bartolini.html  Barzante-deudas.html  Barzante.html  Beto-deudas.html  Beto.html  Botti-deudas.html  Botti.html  Brian-deudas.html  Brian.html  Calozo-deudas.html  Calozo.html  Cbamryyv.html  Cnegvphyne.html  Cuacuarini-deudas.html  Cuacuarini.html  Curcio-deudas.html  Curcio.html  Dadamo-deudas.html  Dadamo.html  Dalzotto-deudas.html  Dalzotto.html  Enhy.html  Ernesto-deudas.html  Ernesto.html  Farias-deudas.html  Farias.html  Ferrari-deudas.html  Ferrari.html  Fhnerm.html  Finelli-deudas.html  Finelli.html  Freenab.html  Gamalero-deudas.html  Gamalero.html  Gbefrtab-uvwb.html  (+83 more)
web/: base.html  (+18 more)
(+16 files in other folders)
