[tool.poetry]
name = "infomesas-gui"
version = "0.1.0"
description = ""
authors = ["waltermas <walterjmas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
